[ANCHORS w/ HREF] Fix links jumping, there is now offset applied so they do not go under the navbar anymore

--- a/client/components/ambassador/Ambassador.css
+++ b/client/components/ambassador/Ambassador.css
@@ -2,8 +2,12 @@
 
 @custom-media --side-by-side (width > 700px);
 
-.Ambassador {
+.Container {
     margin: 3em 0;
+
+    & h2 {
+        text-align: center;
+    }
 }
 
 .Banner {
@@ -42,10 +46,6 @@
 
 .Content {
     order: 1;
-
-    & > h2 {
-        text-align: center;
-    }
 
     @media (--side-by-side) {
         flex: 2 0;
